test/spec_vectors/load64/fail/module_26.wat
(module (memory i64 1) (func $load_f32 (f32.load (i64.const 0))))